--- a/index.html
+++ b/index.html
@@ -5,31 +5,72 @@
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <title>Billion Jump</title>
 <style>
-  :root{ --text:#EAF1FF; --glass:rgba(10,16,40,.85); --border:rgba(255,255,255,.14); }
+  :root{
+    --text:#EAF1FF; --muted:#c9d3ff; --glass:rgba(10,16,40,.85); --border:rgba(255,255,255,.14);
+    --brand1:#1F50FF; --brand2:#1636C9; --brand3:#0C1E66;
+    --btn-bg:rgba(255,255,255,.08); --btn-bg-hover:rgba(255,255,255,.12);
+  }
   html,body{margin:0;padding:0;overflow:hidden;background:#0b1224;color:var(--text);font-family:ui-sans-serif,system-ui,-apple-system,Segoe UI,Roboto,Helvetica,Arial}
   canvas{position:fixed;inset:0;width:100vw;height:100vh;display:block;z-index:0}
+  /* HUD */
   #hud{position:fixed;inset:0;pointer-events:none;z-index:2;font-weight:800}
   #hud .score{position:absolute;top:16px;font-variant-numeric:tabular-nums;text-shadow:0 2px 8px rgba(0,0,0,.6)}
-  #hud .left{left:18px} #hud .center{left:50%;transform:translateX(-50%)}
+  #hud .left{left:18px}
+  #hud .center{left:50%;transform:translateX(-50%)}
+    /* Brand (sağ üst) */
+    #brand{
+    position:fixed;
+    top:14px; right:16px;
+    z-index:10001;           
+    pointer-events:auto;     
+    font-weight:800; letter-spacing:.3px; opacity:.92;
+    padding:6px 10px; border-radius:12px; border:1px solid var(--border);
+    background:linear-gradient(180deg,rgba(255,255,255,.06),rgba(255,255,255,.03));
+    box-shadow:0 8px 24px rgba(0,0,0,.35); backdrop-filter:blur(6px);
+    font-size:12px; color:var(--text); text-decoration:none;
+    }
+    #brand:hover{ opacity:1; transform:translateY(-1px); transition:.15s }
+
+  /* UI container */
   #ui{position:fixed;inset:0;display:flex;align-items:center;justify-content:center;z-index:9999;pointer-events:auto}
-  .card{width:min(560px,92vw);padding:28px 26px 24px;border-radius:18px;background:var(--glass);border:1px solid var(--border);backdrop-filter:blur(10px);box-shadow:0 18px 44px rgba(0,0,0,.55);text-align:center}
-  .title{font-size:36px;margin:0 0 8px}
+  .card{
+    width:min(560px,92vw);padding:28px 26px 24px;border-radius:18px;background:var(--glass);
+    border:1px solid var(--border);backdrop-filter:blur(10px);box-shadow:0 18px 44px rgba(0,0,0,.55);text-align:center
+  }
+  .title{font-size:36px;margin:0 0 8px;letter-spacing:.2px}
+  .subtitle{margin:0 0 16px;color:var(--muted);opacity:.9;font-weight:600}
   .muted{opacity:.75;margin-bottom:12px}
   .row{display:flex;gap:12px;justify-content:center;flex-wrap:wrap}
-  .btn{padding:12px 18px;border-radius:14px;border:1px solid var(--border);cursor:pointer;background:rgba(255,255,255,.08);color:var(--text);font-weight:800}
-  .btn:hover{transform:translateY(-1px);background:rgba(255,255,255,.12)}
+  /* Inputs */
   .input{width:100%;padding:12px 14px;border-radius:12px;border:1px solid rgba(255,255,255,.18);background:rgba(255,255,255,.06);color:var(--text);outline:none}
   .input:focus{box-shadow:0 0 0 3px rgba(31,80,255,.25);border-color:rgba(31,80,255,.6)}
+  /* Buttons */
+  .btn{padding:12px 18px;border-radius:14px;border:1px solid var(--border);cursor:pointer;
+       background:var(--btn-bg);color:var(--text);font-weight:800;transition:.18s transform,.18s background,.18s box-shadow;will-change:transform}
+  .btn:hover{transform:translateY(-1px);background:var(--btn-bg-hover);box-shadow:0 10px 28px rgba(0,0,0,.35)}
+  .btn:active{transform:translateY(0)}
+  .btn.primary{
+    border-color:rgba(54,105,255,.6);
+    background:linear-gradient(180deg,rgba(31,80,255,.85),rgba(22,54,201,.85));
+    box-shadow:0 10px 28px rgba(31,80,255,.35), inset 0 0 0 1px rgba(255,255,255,.12)
+  }
+  .btn.primary:hover{background:linear-gradient(180deg,rgba(31,80,255,.92),rgba(22,54,201,.92))}
+  .btn.ghost{background:rgba(255,255,255,.04)}
 </style>
 </head>
 <body>
 
 <canvas id="game"></canvas>
 
+<!-- HUD -->
 <div id="hud" aria-hidden="true">
   <div class="score left">Highest: <span id="best">0</span></div>
   <div class="score center">Score: <span id="score">0</span></div>
 </div>
+
+<a id="brand" href="https://x.com/DoganYigitShn" target="_blank" rel="noopener noreferrer">
+  Built by RA
+</a>
 
 <div id="ui"></div>
 
@@ -55,6 +96,7 @@ function fit(){
 }
 addEventListener('resize', fit);
 
+/* === Session (server-verified) === */
 let sessionToken = null, sessionSeed = null;
 let sessionPromise = null;
 
@@ -89,33 +131,30 @@ async function ensureSession(){
   return sessionPromise;
 }
 
+/* === State & Physics === */
 const State={NAME:'name',MENU:'menu',READY:'ready',PLAYING:'playing',GAMEOVER:'gameover',LB:'leaderboard'};
 let state=State.NAME;
 
 const BASE={GRAV:1800,FLAP:-520,PIPE_W:72,GAP_FRAC:0.28,SCROLL:220,SPAWN:1.25};
 let GRAV=0,FLAP=0,PIPE_W=0,PIPE_GAP=0,SCROLL=0,SPAWN_EVERY=BASE.SPAWN;
-let BASE_GAP=0;        
-let BASE_SPACING=0;    
+let BASE_GAP=0, BASE_SPACING=0;
 
 function setPhysics(){
   GRAV=BASE.GRAV*SCALE; FLAP=BASE.FLAP*SCALE;
   PIPE_W=Math.max(44,Math.floor(BASE.PIPE_W*SCALE));
-  BASE_GAP=Math.max(130*SCALE,Math.floor(H*BASE.GAP_FRAC)); 
+  BASE_GAP=Math.max(130*SCALE,Math.floor(H*BASE.GAP_FRAC));
   PIPE_GAP=BASE_GAP;
-  SCROLL=BASE.SCROLL*SCALE;     
-  SPAWN_EVERY = BASE.SPAWN;    
-  BASE_SPACING = 440 * SCALE;   
+  SCROLL=BASE.SCROLL*SCALE;
+  SPAWN_EVERY = BASE.SPAWN;
+  BASE_SPACING = 440 * SCALE;
   bird.r=Math.max(20,Math.floor(24*SCALE));
   bird.x=Math.floor(Math.min(W*0.25,240*SCALE));
 }
 
 function difficultyLevel(score){
   let lvl = 0;
-  if (score >= 10 && score < 30) {
-    lvl = 1 + Math.floor((score - 10) / 10);   
-  } else if (score >= 30) {
-    lvl = 3 + Math.floor((score - 30) / 5);  
-  }
+  if (score >= 10 && score < 30) lvl = 1 + Math.floor((score - 10) / 10);
+  else if (score >= 30)          lvl = 3 + Math.floor((score - 30) / 5);
   return Math.min(lvl, 10);
 }
 
@@ -139,6 +178,7 @@ function rand(a,b){ return rng()*(b-a)+a; }
 function spawnPipe(){ const min=40*SCALE,max=H-PIPE_GAP-40*SCALE; pipes.push({x:W+50,top:rand(min,Math.max(min,max)),passed:false}); }
 function circleRect(cx,cy,r,rx,ry,rw,rh){ const nx=Math.max(rx,Math.min(cx,rx+rw)),ny=Math.max(ry,Math.min(cy,ry+rh)); const dx=cx-nx,dy=cy-ny; return dx*dx+dy*dy<=r*r; }
 
+/* Input */
 function flap(){
   const tag=document.activeElement && document.activeElement.tagName;
   if(tag==='INPUT'||tag==='TEXTAREA') return;
@@ -146,8 +186,7 @@ function flap(){
   if(state===State.PLAYING){
     bird.vy=FLAP;
     flapsMs.push(Math.floor(performance.now() - startAt));
-  }
-  else if(state===State.GAMEOVER){ state=State.READY; reset(); }
+  } else if(state===State.GAMEOVER){ state=State.READY; reset(); }
   drawUI();
 }
 addEventListener('keydown',(e)=>{
@@ -157,47 +196,52 @@ addEventListener('keydown',(e)=>{
   if(state===State.GAMEOVER&&(e.code==='Enter'||e.code==='Space')){ e.preventDefault(); flap(); }
 },{passive:false});
 
+/* UI helpers */
 function clearUI(){ ui.innerHTML=''; ui.style.background=''; }
 function card(html){ ui.style.background=THEME.dim; const c=document.createElement('div'); c.className='card'; c.innerHTML=html; ui.replaceChildren(c); return c; }
 
 function showName(){
   const c = card(`
     <h1 class="title">Billion Jump</h1>
-    <div class="muted">Enter a nickname to get started</div>
+    <p class="subtitle">Choose a nickname to start</p>
     <div class="row" style="margin-top:8px">
       <input id="nameInput" class="input" type="text" maxlength="20" placeholder="nickname" style="min-width:320px">
     </div>
-    <div class="row" style="margin-top:12px">
-      <button class="btn" data-action="save-name">Continue</button>
+    <div class="row" style="margin-top:16px">
+      <button class="btn primary" data-action="save-name">Continue</button>
+      <button class="btn ghost" data-action="lb">Leaderboard</button>
     </div>`);
   setTimeout(()=>c.querySelector('#nameInput').focus(),0);
 }
 
 function showMenu(){
-  card(`<h1 class="title">Welcome, ${nickname||'Player'}</h1>
-    <div class="row">
-      <button class="btn" data-action="play">Play</button>
-      <button class="btn" data-action="lb">Leaderboard</button>
-    </div>`);
+  card(`
+    <h1 class="title">Welcome, ${nickname||'Player'}</h1>
+    <p class="subtitle">Fly between the pipes. One tap at a time.</p>
+    <div class="row" style="margin-top:6px">
+      <button class="btn primary" data-action="play">Play</button>
+      <button class="btn ghost" data-action="lb">Leaderboard</button>
+    </div>
+  `);
 }
 
 function showLeaderboard(){
   const c=card(`<h1 class="title">Leaderboard</h1>
     <div id="lb" style="max-height:60vh;overflow:auto;text-align:left;padding:8px;display:flex;flex-direction:column;gap:6px"><div class="muted">Loading...</div></div>
-    <div class="row" style="margin-top:10px"><button class="btn" data-action="back">Back</button></div>`);
-  fetch('/api/leaderboard?limit=100').then(r=>r.json()).then(d=>{
+    <div class="row" style="margin-top:10px"><button class="btn ghost" data-action="back">Back</button></div>`);
+  fetch('/api/leaderboard').then(r=>r.json()).then(d=>{
     const rows=Array.isArray(d.rows)?d.rows:[]; const lb=c.querySelector('#lb');
     if(!rows.length){ lb.innerHTML='<div class="muted">No scores yet</div>'; return; }
-    lb.innerHTML=rows.map((r,i)=>`<div style="display:flex;justify-content:space-between;border-bottom:1px dashed rgba(255,255,255,.1);padding:6px 2px"><span>${i+1}. ${r.name}</span><b>${r.best}</b></div>`).join('');
+    lb.innerHTML=rows.map((r,i)=>`<div style="display:flex;justify-content:space-between;border-bottom:1px dashed rgba(255,255,255,.1);padding:8px 4px"><span>${i+1}. ${r.name}</span><b>${r.best}</b></div>`).join('');
   }).catch(()=>{ c.querySelector('#lb').innerHTML='<div class="muted">Unable to load</div>'; });
 }
 
 function showGameOver(){
   card(`<h1 class="title">Game Over</h1>
-    <div class="muted" style="margin-bottom:8px">Score: <b>${score}</b> · Best: <b>${best}</b></div>
+    <div class="muted" style="margin-bottom:10px">Score: <b>${score}</b> · Best: <b>${best}</b></div>
     <div class="row">
-      <button class="btn" data-action="restart">Restart</button>
-      <button class="btn" data-action="menu">Menu</button>
+      <button class="btn primary" data-action="restart">Restart</button>
+      <button class="btn ghost" data-action="menu">Menu</button>
     </div>`);
 }
 
@@ -209,12 +253,13 @@ function drawUI(){
   clearUI();
 }
 
+/* UI events */
 ui.addEventListener('click',(e)=>{
   const el=e.target.closest('[data-action]'); if(!el) return;
   const act=el.getAttribute('data-action');
   if(act==='save-name'){
     const v=(document.getElementById('nameInput')?.value||'').trim();
-    if(v.length<2||v.length>20) return document.getElementById('nameInput').focus(); // min 2
+    if(v.length<2||v.length>20) return document.getElementById('nameInput').focus();
     nickname=v; localStorage.setItem(LS.name,nickname); state=State.MENU; drawUI(); return;
   }
   if(act==='play'){
@@ -236,6 +281,7 @@ ui.addEventListener('keydown',(e)=>{
   }
 });
 
+/* Drawing */
 function bg(){
   const g=ctx.createLinearGradient(0,0,0,H);
   g.addColorStop(0,THEME.primary); g.addColorStop(0.55,THEME.primaryMid); g.addColorStop(1,THEME.primaryDark);
@@ -245,7 +291,7 @@ const charImg = new Image();
 charImg.src = './assets/char.png';
 function drawBird() {
   const ready = charImg.complete && charImg.naturalWidth>0;
-  const size = bird.r * 8; 
+  const size = bird.r * 8;
   ctx.save();
   ctx.translate(bird.x, bird.y);
   ctx.rotate(Math.atan2(bird.vy, 400 * SCALE) * 0.2);
@@ -264,10 +310,10 @@ function drawPipes(dt){
   }
 }
 
+/* Loop */
 let last=performance.now();
 function loop(now){
   const dt=Math.min(0.034,(now-last)/1000); last=now;
-
   bg();
 
   if(state===State.PLAYING){
@@ -319,11 +365,11 @@ function loop(now){
   requestAnimationFrame(loop);
 }
 
+/* Game Over + server submit */
 function gameOver(){
   if(state===State.GAMEOVER) return;
   state=State.GAMEOVER;
 
-  // yerel best'i UI için tut (opsiyonel)
   if(score>best){
     best=score; localStorage.setItem(LS.best,String(best)); hudBest.textContent=best;
   }
@@ -356,11 +402,11 @@ function gameOver(){
   drawUI();
 }
 
+/* Start */
 fit(); reset(); drawUI(); requestAnimationFrame(loop);
 ensureSession();
 
 if(nickname){ state=State.MENU; drawUI(); } else { state=State.NAME; drawUI(); }
-
 })();
 </script>
 </body>
