--- a/index.html
+++ b/index.html
@@ -183,56 +183,36 @@ function showMenu(){
 }
 
 function showLeaderboard(){
-  const c = card(`
-    <h1 class="title">Leaderboard</h1>
-    <div id="lb" style="max-height:60vh;overflow:auto;text-align:left;padding:8px;display:flex;flex-direction:column;gap:6px">
-      <div class="muted">Loading...</div>
-    </div>
-    <div class="row" style="margin-top:10px">
-      <button class="btn ghost" data-action="back">Back</button>
-    </div>
-  `);
+  const c=card(`<h1 class="title">Leaderboard</h1>
+    <div id="lb" style="max-height:60vh;overflow:auto;text-align:left;padding:8px;display:flex;flex-direction:column;gap:6px"><div class="muted">Loading...</div></div>
+    <div class="row" style="margin-top:10px"><button class="btn ghost" data-action="back">Back</button></div>`);
 
-  const url = new URL('/api/leaderboard', window.location.origin);
-  url.searchParams.set('limit', '20');
-  if (nickname) url.searchParams.set('name', nickname);
+  const q = nickname ? `?name=${encodeURIComponent(nickname)}` : '';
+  fetch('/api/leaderboard'+q).then(r=>r.json()).then(d=>{
+    const lb=c.querySelector('#lb');
+    if (!d?.ok) { lb.innerHTML='<div class="muted">Unable to load</div>'; return; }
 
-  fetch(url.toString())
-    .then(r => r.json())
-    .then(d => {
-      const rows = Array.isArray(d.rows) ? d.rows : [];
-      const me = d.me || null;
-      const lb = c.querySelector('#lb');
+    const rows = Array.isArray(d.rows)?d.rows:[];
+    if (!rows.length){ lb.innerHTML='<div class="muted">No scores yet</div>'; return; }
 
-      if (!rows.length) {
-        lb.innerHTML = '<div class="muted">No scores yet</div>';
-        return;
-      }
+    let html = rows.map((r,i)=>`
+      <div style="display:flex;justify-content:space-between;border-bottom:1px dashed rgba(255,255,255,.1);padding:8px 4px">
+        <span>${i+1}. ${r.name}</span><b>${r.best}</b>
+      </div>`).join('');
 
-      // Top 20 render
-      lb.innerHTML = rows.map((r, i) =>
-        `<div style="display:flex;justify-content:space-between;border-bottom:1px dashed rgba(255,255,255,.1);padding:8px 4px">
-           <span>${i+1}. ${r.name}</span><b>${r.best}</b>
-         </div>`
-      ).join('');
+    // “you” satırı: top20 içinde değilse en alta ekle
+    if (d.you && d.you.rank > 20) {
+      html += `
+        <div style="opacity:.5;border-bottom:1px dashed rgba(255,255,255,.08);margin:6px 0"></div>
+        <div style="display:flex;justify-content:space-between;padding:8px 4px">
+          <span>${d.you.rank}. <b>you</b> (${d.you.name})</span><b>${d.you.best}</b>
+        </div>`;
+    }
 
-      // me varsa ve listede yoksa (isme göre karşılaştırma)
-      if (me && me.name && !rows.some(r => r.name === me.name)) {
-        // ayırıcı
-        const sep = document.createElement('div');
-        sep.style.cssText = 'opacity:.5;border-top:1px solid rgba(255,255,255,.12);margin:4px 0';
-        lb.appendChild(sep);
-
-        const you = document.createElement('div');
-        you.style.cssText = 'display:flex;justify-content:space-between;padding:8px 4px';
-        you.innerHTML = `<span>You (#${me.rank}): ${me.name}</span><b>${me.best}</b>`;
-        lb.appendChild(you);
-      }
-    })
-    .catch(() => {
-      c.querySelector('#lb').innerHTML = '<div class="muted">Unable to load</div>';
-    });
+    lb.innerHTML = html;
+  }).catch(()=>{ c.querySelector('#lb').innerHTML='<div class="muted">Unable to load</div>'; });
 }
+
 
 
 function showGameOver(){
