--- a/index.html
+++ b/index.html
@@ -187,33 +187,47 @@ function showLeaderboard(){
     <div id="lb" style="max-height:60vh;overflow:auto;text-align:left;padding:8px;display:flex;flex-direction:column;gap:6px"><div class="muted">Loading...</div></div>
     <div class="row" style="margin-top:10px"><button class="btn ghost" data-action="back">Back</button></div>`);
 
-  const q = nickname ? `?name=${encodeURIComponent(nickname)}` : '';
-  fetch('/api/leaderboard'+q).then(r=>r.json()).then(d=>{
-    const lb=c.querySelector('#lb');
-    if (!d?.ok) { lb.innerHTML='<div class="muted">Unable to load</div>'; return; }
+  // *** İstediğin snippet: limit=20 & me=nickname ***
+  fetch('/api/leaderboard?limit=20&me=' + encodeURIComponent(nickname||''))
+    .then(r => r.json())
+    .then(d => {
+      const lb = c.querySelector('#lb');
+      if (!d?.ok) { lb.innerHTML = '<div class="muted">Unable to load</div>'; return; }
 
-    const rows = Array.isArray(d.rows)?d.rows:[];
-    if (!rows.length){ lb.innerHTML='<div class="muted">No scores yet</div>'; return; }
+      const rows = Array.isArray(d.rows) ? d.rows : [];
+      const list = [...rows];
 
-    let html = rows.map((r,i)=>`
-      <div style="display:flex;justify-content:space-between;border-bottom:1px dashed rgba(255,255,255,.1);padding:8px 4px">
-        <span>${i+1}. ${r.name}</span><b>${r.best}</b>
-      </div>`).join('');
+      // top 20'de yoksa en alta "you: X"
+      if (d.you && !d.inTop) {
+        list.push({ name: 'you (' + d.you.name + ')', best: d.you.best, _you: true });
+      }
 
-    // “you” satırı: top20 içinde değilse en alta ekle
-    if (d.you && d.you.rank > 20) {
-      html += `
-        <div style="opacity:.5;border-bottom:1px dashed rgba(255,255,255,.08);margin:6px 0"></div>
-        <div style="display:flex;justify-content:space-between;padding:8px 4px">
-          <span>${d.you.rank}. <b>you</b> (${d.you.name})</span><b>${d.you.best}</b>
-        </div>`;
-    }
+      if (!list.length) { lb.innerHTML = '<div class="muted">No scores yet</div>'; return; }
 
-    lb.innerHTML = html;
-  }).catch(()=>{ c.querySelector('#lb').innerHTML='<div class="muted">Unable to load</div>'; });
+      // render
+      let html = '';
+      rows.forEach((r, i) => {
+        html += `
+          <div style="display:flex;justify-content:space-between;border-bottom:1px dashed rgba(255,255,255,.1);padding:8px 4px">
+            <span>${i+1}. ${r.name}</span><b>${r.best}</b>
+          </div>`;
+      });
+
+      const appended = list.find(x => x._you);
+      if (appended) {
+        html += `
+          <div style="opacity:.5;border-bottom:1px dashed rgba(255,255,255,.08);margin:6px 0"></div>
+          <div style="display:flex;justify-content:space-between;padding:8px 4px">
+            <span><b>you</b></span><b>${appended.best}</b>
+          </div>`;
+      }
+
+      lb.innerHTML = html;
+    })
+    .catch(() => {
+      c.querySelector('#lb').innerHTML = '<div class="muted">Unable to load</div>';
+    });
 }
-
-
 
 function showGameOver(){
   card(`<h1 class="title">Game Over</h1>
